--- a/package.json
+++ b/package.json
@@ -6,9 +6,22 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.4.16",
+    "@headlessui/react": "^1.4.1",
+    "@heroicons/react": "^1.0.4",
+    "apollo-link-context": "^1.0.20",
+    "formik": "^2.2.9",
+    "graphql": "^15.6.1",
     "next": "latest",
+    "node-fetch": "^3.0.0",
+    "normalize.css": "^8.0.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-activity": "^2.1.1",
+    "react-dom": "^17.0.2",
+    "react-select": "^5.1.0",
+    "recharts": "^2.1.5",
+    "sweetalert2": "^11.1.7",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
