--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^17.0.2",
     "react-activity": "^2.1.1",
     "react-dom": "^17.0.2",
+    "react-paginate": "^7.1.5",
     "react-select": "^5.1.0",
     "recharts": "^2.1.5",
     "sweetalert2": "^11.1.7",
