--- a/package.json
+++ b/package.json
@@ -7,17 +7,20 @@
   },
   "dependencies": {
     "@apollo/client": "^3.4.16",
+    "@biproxi/react-text-mask": "^5.4.3",
     "@headlessui/react": "^1.4.1",
     "@heroicons/react": "^1.0.4",
     "apollo-link-context": "^1.0.20",
     "formik": "^2.2.9",
     "graphql": "^15.6.1",
+    "moment": "^2.29.1",
     "next": "latest",
     "node-fetch": "^3.0.0",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-activity": "^2.1.1",
     "react-dom": "^17.0.2",
+    "react-moment": "^1.1.1",
     "react-paginate": "^7.1.5",
     "react-select": "^5.1.0",
     "recharts": "^2.1.5",
